--- a/MyDoctor-iOS/Info.plist
+++ b/MyDoctor-iOS/Info.plist
@@ -39,5 +39,11 @@
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
 	</array>
+    
+    <key>LSApplicationQueriesSchemes</key>
+    <array>
+        <string>comgooglemaps</string>
+        <string>comgooglemaps-x-callback</string>
+    </array>
 </dict>
 </plist>
